added unit tests

--- a/Main/Input/config.json
+++ b/Main/Input/config.json
@@ -1,5 +1,5 @@
 {
     "database": "Customers.db",
-    "database_path": "Data_base",
+    "database_path": "Database",
     "table_name": "Customers"
 }
